style: cap nhat layout post card keo dai het dong va size co dinh

--- a/src/components/Blog/PostCard.astro
+++ b/src/components/Blog/PostCard.astro
@@ -42,6 +42,8 @@ const { post, className = '' } = Astro.props;
     height: 100%;
     display: flex;
     flex-direction: column;
+    width: 100%;
+    min-height: 120px;
   }
 
   .post-card:hover {
