--- a/src/components/Blog/PostCard.astro
+++ b/src/components/Blog/PostCard.astro
@@ -18,18 +18,18 @@ const { post, className = '' } = Astro.props;
 ---
 
 <article class={`post-card ${className}`}>
-  <div class="post-card__header">
-    <span class="post-card__category">{post.data.category}</span>
-    <span class="post-card__reading-time">
-      {post.data.readingTime} phút đọc
-    </span>
-  </div>
-  
-  <h3 class="post-card__title">
-    <a href={`/blog/${post.slug}`} class="post-card__link">
+  <a href={`/blog/${post.slug}`} class="post-card__link">
+    <div class="post-card__header">
+      <span class="post-card__category">{post.data.category}</span>
+      <span class="post-card__reading-time">
+        {post.data.readingTime} phút đọc
+      </span>
+    </div>
+    
+    <h3 class="post-card__title">
       {post.data.title}
-    </a>
-  </h3>
+    </h3>
+  </a>
 </article>
 
 <style>
@@ -87,6 +87,9 @@ const { post, className = '' } = Astro.props;
   .post-card__link {
     color: inherit;
     text-decoration: none;
+    display: block;
+    width: 100%;
+    height: 100%;
     transition: color var(--transition-fast);
   }
 
